fixed max spacing issue
added max-width: 960px;
    margin: 0 auto;

    to body in css

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ body {
     flex-direction: column;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: #1f2937;
-    align-items: center;
+    max-width: 960px;
+    margin: 0 auto;
 }
 
 h1 {
@@ -70,7 +71,6 @@ button.border {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 960px;
 }
 
 .logo {
@@ -83,9 +83,8 @@ button.border {
 .container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     color: white;
-    width: 960px;
 }
 
 .container.white {
@@ -93,5 +92,5 @@ button.border {
 }
 
 .content {
-    max-width: 960px;
+
 }
